name:                json-sampler
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Aeson.Sampler
  build-depends:       base >=4.7 && <4.8, aeson >=0.7 && <0.8, text >=1.1 && <1.2, mtl >=2.1 && <2.2, containers >=0.5 && <0.6, vector >=0.10 && <0.11, unordered-containers >=0.2 && <0.3, template-haskell >=2.9 && <2.10, scientific
  default-language:    Haskell2010

executable riot
  main-is:             Main.hs
  other-modules:       Riot
  build-depends:       base >=4.7 && <4.8, aeson >=0.7 && <0.8, json-sampler
  hs-source-dirs:      examples
  default-language:    Haskell2010